--- a/Member Area Test/App_Data/umbraco.config
+++ b/Member Area Test/App_Data/umbraco.config
@@ -6,4 +6,20 @@
 <!ATTLIST Text id ID #REQUIRED>
 
 ]>
-<root id="-1" />
+<root id="-1">
+  <Home id="1056" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2014-08-18T16:48:36" updateDate="2014-08-18T17:26:03" nodeName="Home" urlName="home" path="-1,1056" isDoc="" nodeType="1051" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1064" nodeTypeAlias="Home">
+    <Text id="1057" parentID="1056" level="2" creatorID="0" sortOrder="0" createDate="2014-08-18T16:49:09" updateDate="2014-08-18T16:49:09" nodeName="Public" urlName="public" path="-1,1056,1057" isDoc="" nodeType="1053" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1052" nodeTypeAlias="Text">
+      <title><![CDATA[Public]]></title>
+      <content><![CDATA[<p>This is public content</p>]]></content>
+    </Text>
+    <Text id="1058" parentID="1056" level="2" creatorID="0" sortOrder="1" createDate="2014-08-18T16:49:34" updateDate="2014-08-18T16:49:34" nodeName="Private" urlName="private" path="-1,1056,1058" isDoc="" nodeType="1053" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1052" nodeTypeAlias="Text">
+      <title><![CDATA[Private]]></title>
+      <content><![CDATA[<p>This is private content</p>]]></content>
+    </Text>
+    <Text id="1059" parentID="1056" level="2" creatorID="0" sortOrder="2" createDate="2014-08-18T16:49:57" updateDate="2014-08-18T17:01:44" nodeName="Login" urlName="login" path="-1,1056,1059" isDoc="" nodeType="1053" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1054" nodeTypeAlias="Text">
+      <title><![CDATA[Login]]></title>
+    </Text>
+    <Text id="1060" parentID="1056" level="2" creatorID="0" sortOrder="3" createDate="2014-08-18T16:50:10" updateDate="2014-08-18T17:01:58" nodeName="Register" urlName="register" path="-1,1056,1060" isDoc="" nodeType="1053" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1063" nodeTypeAlias="Text" />
+    <Text id="1061" parentID="1056" level="2" creatorID="0" sortOrder="4" createDate="2014-08-18T16:50:22" updateDate="2014-08-18T17:02:04" nodeName="Validate" urlName="validate" path="-1,1056,1061" isDoc="" nodeType="1053" creatorName="Owen Henry" writerName="Owen Henry" writerID="0" template="1062" nodeTypeAlias="Text" />
+  </Home>
+</root>
